tests/type-errors/for_ident_double_set.arl
archetype for_ident_double_set

entry exec () {
  effect {
    var l : set<nat> = [1; 2; 3];
    for (k, v) in l do
      ()
    done
  }
}
